Add new features and enhancements to the DSPy module
- Introduced a version check for the dspy package.
- Updated the LM initialization to include a cache option.
- Added a Python interpreter test to verify functionality.
- Implemented a ProgramOfThought for mathematical operations with example questions.
- Enhanced the StoryPuzzleLab to return an outline instead of a full story.
- Improved the sentiment analysis example with a new metric function and BootstrapFewShot optimizer.
- Created a new sentiment.json file to store demo data and signatures for sentiment analysis.
- Added markdown explanations for Bayesian search and sentiment analysis tasks.

--- a/dspy_modules/intro_to_dspy.ipynb
+++ b/dspy_modules/intro_to_dspy.ipynb
@@ -31,12 +31,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8de02a65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import importlib.metadata\n",
+    "print(importlib.metadata.version('dspy'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a5efa3a3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import dspy\n",
-    "lm = dspy.LM('openai/qwen2.5:7b-instruct-q4_K_M', api_base='http://localhost:11434/v1', api_key='')\n",
+    "lm = dspy.LM('openai/qwen2.5:7b-instruct-q4_K_M', \n",
+    "             api_base='http://localhost:11434/v1', \n",
+    "             api_key='', \n",
+    "             cache=False)\n",
+    "\n",
     "dspy.configure(lm=lm)\n",
     "dspy.enable_logging()"
    ]
@@ -297,7 +312,7 @@
     "\n",
     "question_answerer = dspy.ReAct(\"question -> answer\",tools=[count_letters],max_iters=3)\n",
     "\n",
-    "print(question_answerer(question=\"How many R's in the word strawberry?\"))\n"
+    "print(question_answerer(question=\"How many R's in the word strawberry?\"))"
    ]
   },
   {
@@ -317,12 +332,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "84376233",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dspy import PythonInterpreter\n",
+    "\n",
+    "#test that the Python interpreter works\n",
+    "print(PythonInterpreter()(\"print('Hello World!')\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b62ff7db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "pot = dspy.ProgramOfThought(\"question -> answer: float\", max_iters=5)\n",
+    "\n",
+    "code_gen = pot.code_generate(question=\"what is 5234 times 5324?\")\n",
+    "#adding `.code_generate` to the end makes that the code doesn't execute. it just generates and returns the code.\n",
+    "print(code_gen,\"=\"*15)\n",
+    "\n",
+    "\n",
+    "result = pot(question=\"what is 5234 times 5324?\")\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b14c8e6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_2 = pot(question=\"what is 5234 times 5324?\")\n",
+    "result_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7758ba01",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pot_math = dspy.ProgramOfThought(\"question -> answer: float\", max_iters=5)\n",
-    "print(pot_math(question=\"What is the third root of 963261?\").answer)\n"
+    "pot_math = dspy.ProgramOfThought(\"question -> answer: float\", max_iters=5).code_generate\n",
+    "result = pot_math(question=\"What is the  third root of 963261?\")\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e76ea93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code_attempt = pot_math(question=\"what is the eigth root of 52876533252\")  # raw string\n",
+    "print(code_attempt)"
    ]
   },
   {
@@ -414,7 +484,9 @@
     "\n",
     "\n",
     "zodiac_finder=HoroscopeFromBirthday()\n",
-    "print(zodiac_finder(birth_day=\"I was born on december 25, 2000\"))\n",
+    "text = \"I was born on december 25, 2000\"\n",
+    "print('Input:', text)\n",
+    "print(zodiac_finder(birth_day=text))\n",
     "        "
    ]
   },
@@ -423,7 +495,11 @@
    "id": "a75ff605",
    "metadata": {},
    "source": [
-    "Here's a more complicated one:"
+    "## Complex Module Example: Story Lab\n",
+    "\n",
+    "You give it a story scenario/genre and it will work through the idea:\n",
+    "- first, it calls `FindInspo`, which comes up with a few catchy ideas.\n",
+    "- then it drafts the "
    ]
   },
   {
@@ -441,10 +517,6 @@
     "    topic   = dspy.InputField()\n",
     "    blurbs  = dspy.InputField(format=list)\n",
     "    outline = dspy.OutputField(desc=\"bullet outline of the plot\")\n",
-    "\n",
-    "class InsertPuzzle(dspy.Signature):\n",
-    "    outline = dspy.InputField()\n",
-    "    story   = dspy.OutputField(desc=\"short story that embeds a logic puzzle\")\n",
     "\n",
     "class BuildQuiz(dspy.Signature):\n",
     "    story      = dspy.InputField()\n",
@@ -470,25 +542,23 @@
     "        super().__init__()\n",
     "        self.inspirer = dspy.ChainOfThought(FindInspo, n=1)\n",
     "        self.plotter  = dspy.ChainOfThoughtWithHint(DraftPlot)\n",
-    "        self.puzzler  = dspy.ProgramOfThought(InsertPuzzle, max_iters=3)\n",
     "        self.quizzer  = dspy.ChainOfThought(BuildQuiz)\n",
     "        self.teaser   = dspy.ChainOfThought(TeaseTweet, max_len=70)  # ≈ tweet\n",
     "\n",
     "    def forward(self, topic: str):\n",
     "        blurbs   = self.inspirer(topic=topic).blurbs\n",
     "        outline  = self.plotter(topic=topic, blurbs=blurbs).outline\n",
-    "        story    = self.puzzler(outline=outline).story\n",
-    "        quiz     = self.quizzer(story=story).questions\n",
-    "        tweet    = self.teaser(story=story).tweet\n",
+    "        quiz     = self.quizzer(story=outline).questions\n",
+    "        tweet    = self.teaser(story=outline).tweet\n",
     "\n",
-    "        return dict(story=story, quiz=quiz, tweet=tweet, inspo=blurbs)\n",
+    "        return dict(outline=outline, quiz=quiz, tweet=tweet, inspo=blurbs)\n",
     "\n",
     "\n",
     "\n",
     "lab = StoryPuzzleLab()\n",
     "res = lab(\"Lost temple, steam-age explorers\")\n",
     "print(\"\\n— INSPIRATION —\\n\", res[\"inspo\"])\n",
-    "print(\"\\n— STORY —\\n\",res[\"story\"])\n",
+    "print(\"\\n— STORY —\\n\",res[\"outline\"])\n",
     "print(\"\\n— QUIZ —\\n\",res['quiz'])\n",
     "print(\"\\n— TWEET —\\n\", res[\"tweet\"])"
    ]
@@ -520,14 +590,27 @@
     "\n",
     "The syntax is nice and simple and whatever but what's so special about DSPy?\n",
     "\n",
-    "Optimizers are applied at every system prompt that's contained withing your graph of agentic LLM calls. It mutates all the *learnable parameters*: prompt templates, demonstration pools, adaptor weights. It runs a *generate* > *score* > *selectt* loop. It proposes new demos or instructions, runs the module, evaluates the output against a metric function, and keeps the best variants for the next time around. \n",
+    "Well notice how we haven't really defined individual *prompts*? Instead we've been defining Signatures that convey some amount of prompt information. On the backend, Signatures are parsed and converted into one of many basic boilerplate prompts.  *Optimizers* act as ways to iteratively improved those boiletplate prompts.  \n",
     "\n",
-    "Each Optimizer accepts three arguments: \n",
+    "You define a metric associated with the Module you've constructed, you run a couple data samples through the system, then the Optimizer comes in and tweaks the prompts based on the failure modes it's picked up on.  \n",
+    "\n",
+    "There's a ton of different Optimizers out there that each try to modify the prompts in different ways:\n",
+    "- `BootstrapFewShot` creates few-shot demonstrations\n",
+    "- `MIPROv2` and `COPRO` use Bayesian search to propose better natural language instruction. \n",
+    "- `BootstrapFinetune` can be used with smaller LLMs to distill the prompts into weight updates\n",
+    "\n",
+    "Each Optimizer accepts two arguments: \n",
     "- a `Module`\n",
     "- a metric function that returns a float\n",
-    "- train/validation data: 10-300 `Examples`\n",
-    "\n",
-    "Optimizers can be saved to json using `save()` and autologged to MLFlow.\n"
+    "- train/validation data: 10-300 `Examples`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f4f89fe",
+   "metadata": {},
+   "source": [
+    "This example is for sentiment analysis, a pretty mundane task nowadays, but there's tons of available data for it.  For data we're using the Stanford Sentiment Treebank, a collection of single sentence rotton tomatoes reviews that are labelled as either positive or negative. "
    ]
   },
   {
@@ -535,8 +618,119 @@
    "execution_count": null,
    "id": "ce02afed",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Example\n",
+      "{'idx': 6, 'sentence': 'demonstrates that the director of such hollywood blockbusters as patriot games can still turn out a small , personal film with an emotional wallop . ', 'label': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dspy.teleprompt import BootstrapFewShot\n",
+    "from datasets import load_dataset\n",
+    "\n",
+    "\n",
+    "#construct module\n",
+    "sentiment = dspy.Predict(\"text -> label\")\n",
+    "\n",
+    "ds = load_dataset(\"sst2\", split=\"train[:20]\")\n",
+    "print(\"Example\")\n",
+    "print(ds[6])\n",
+    "\n",
+    "\n",
+    "\n",
+    "trainset = [\n",
+    "    dspy.Example(text=ex[\"sentence\"],\n",
+    "                 label=\"positive\" if ex[\"label\"] else \"negative\").with_inputs(\"text\")\n",
+    "    for ex in ds\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45657b6a",
+   "metadata": {},
+   "source": [
+    "Next we have to define our metric function, which captures some sort of validation on the task we're trying to complete. In this case it's pretty trivial: does the Module return the correct label?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "64e8d92c",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def em(example, pred, **_): \n",
+    "    return int(example.label == pred.label)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e918937",
+   "metadata": {},
+   "source": [
+    "For our first round of optimizations we're using BootstrapFewShot. This optimizer adds `k` fewshot examples to the prompt.  Essentially it automates the process of picking the examples that work the best.\n",
+    "\n",
+    "\n",
+    "\n",
+    "For tasks with small token counts you can set the number of examples pretty high. For high token count things that gets a little trickier.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "743f980e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/20 [00:00<?, ?it/s]2025/05/18 17:10:17 ERROR dspy.teleprompt.bootstrap: Failed to run or to evaluate example Example({'text': 'hide new secretions from the parental units ', 'label': 'negative'}) (input_keys=None) with <function em at 0x121b39260> due to Inputs have not been set for this example. Use `example.with_inputs()` to set them..\n",
+      "2025/05/18 17:10:17 ERROR dspy.teleprompt.bootstrap: Failed to run or to evaluate example Example({'text': 'contains no wit , only labored gags ', 'label': 'negative'}) (input_keys=None) with <function em at 0x121b39260> due to Inputs have not been set for this example. Use `example.with_inputs()` to set them..\n",
+      "2025/05/18 17:10:17 ERROR dspy.teleprompt.bootstrap: Failed to run or to evaluate example Example({'text': 'that loves its characters and communicates something rather beautiful about human nature ', 'label': 'positive'}) (input_keys=None) with <function em at 0x121b39260> due to Inputs have not been set for this example. Use `example.with_inputs()` to set them..\n",
+      "2025/05/18 17:10:17 ERROR dspy.teleprompt.bootstrap: Failed to run or to evaluate example Example({'text': 'remains utterly satisfied to remain the same throughout ', 'label': 'negative'}) (input_keys=None) with <function em at 0x121b39260> due to Inputs have not been set for this example. Use `example.with_inputs()` to set them..\n",
+      " 20%|██        | 4/20 [00:00<00:00, 819.68it/s]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Inputs have not been set for this example. Use `example.with_inputs()` to set them.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m opt = BootstrapFewShot(metric=em,\n\u001b[32m      2\u001b[39m                        max_labeled_demos=\u001b[32m4\u001b[39m,\n\u001b[32m      3\u001b[39m                        max_bootstrapped_demos=\u001b[32m4\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m sentiment_clf = \u001b[43mopt\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcompile\u001b[49m\u001b[43m(\u001b[49m\u001b[43msentiment\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrainset\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtrainset\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(sentiment_clf(\u001b[33m\"\u001b[39m\u001b[33mIt was a delightful movie!\u001b[39m\u001b[33m\"\u001b[39m).label)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Repos/personal/obsidian-llm-tool-use/.venv/lib/python3.12/site-packages/dspy/teleprompt/bootstrap.py:83\u001b[39m, in \u001b[36mBootstrapFewShot.compile\u001b[39m\u001b[34m(self, student, teacher, trainset)\u001b[39m\n\u001b[32m     81\u001b[39m \u001b[38;5;28mself\u001b[39m._prepare_student_and_teacher(student, teacher)\n\u001b[32m     82\u001b[39m \u001b[38;5;28mself\u001b[39m._prepare_predictor_mappings()\n\u001b[32m---> \u001b[39m\u001b[32m83\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_bootstrap\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     85\u001b[39m \u001b[38;5;28mself\u001b[39m.student = \u001b[38;5;28mself\u001b[39m._train()\n\u001b[32m     86\u001b[39m \u001b[38;5;28mself\u001b[39m.student._compiled = \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Repos/personal/obsidian-llm-tool-use/.venv/lib/python3.12/site-packages/dspy/teleprompt/bootstrap.py:158\u001b[39m, in \u001b[36mBootstrapFewShot._bootstrap\u001b[39m\u001b[34m(self, max_bootstraps)\u001b[39m\n\u001b[32m    155\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m round_idx \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m.max_rounds):\n\u001b[32m    156\u001b[39m     bootstrap_attempts += \u001b[32m1\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m158\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_bootstrap_one_example\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexample\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mround_idx\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[32m    159\u001b[39m         bootstrapped[example_idx] = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    160\u001b[39m         \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Repos/personal/obsidian-llm-tool-use/.venv/lib/python3.12/site-packages/dspy/teleprompt/bootstrap.py:214\u001b[39m, in \u001b[36mBootstrapFewShot._bootstrap_one_example\u001b[39m\u001b[34m(self, example, round_idx)\u001b[39m\n\u001b[32m    212\u001b[39m         current_error_count = \u001b[38;5;28mself\u001b[39m.error_count\n\u001b[32m    213\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m current_error_count >= \u001b[38;5;28mself\u001b[39m.max_errors:\n\u001b[32m--> \u001b[39m\u001b[32m214\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m e\n\u001b[32m    215\u001b[39m     logger.error(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mFailed to run or to evaluate example \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexample\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m with \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.metric\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m due to \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    217\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m success:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Repos/personal/obsidian-llm-tool-use/.venv/lib/python3.12/site-packages/dspy/teleprompt/bootstrap.py:194\u001b[39m, in \u001b[36mBootstrapFewShot._bootstrap_one_example\u001b[39m\u001b[34m(self, example, round_idx)\u001b[39m\n\u001b[32m    191\u001b[39m     predictor_cache[name] = predictor.demos\n\u001b[32m    192\u001b[39m     predictor.demos = [x \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m predictor.demos \u001b[38;5;28;01mif\u001b[39;00m x != example]\n\u001b[32m--> \u001b[39m\u001b[32m194\u001b[39m prediction = teacher(**\u001b[43mexample\u001b[49m\u001b[43m.\u001b[49m\u001b[43minputs\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m    195\u001b[39m trace = dspy.settings.trace\n\u001b[32m    197\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m name, predictor \u001b[38;5;129;01min\u001b[39;00m teacher.named_predictors():\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Repos/personal/obsidian-llm-tool-use/.venv/lib/python3.12/site-packages/dspy/primitives/example.py:80\u001b[39m, in \u001b[36mExample.inputs\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     78\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34minputs\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m     79\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m._input_keys \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m80\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mInputs have not been set for this example. Use `example.with_inputs()` to set them.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     82\u001b[39m     \u001b[38;5;66;03m# return items that are in input_keys\u001b[39;00m\n\u001b[32m     83\u001b[39m     d = {key: \u001b[38;5;28mself\u001b[39m._store[key] \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m._store \u001b[38;5;28;01mif\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m._input_keys}\n",
+      "\u001b[31mValueError\u001b[39m: Inputs have not been set for this example. Use `example.with_inputs()` to set them."
+     ]
+    }
+   ],
+   "source": [
+    "opt = BootstrapFewShot(metric=em,\n",
+    "                       max_labeled_demos=4,\n",
+    "                       max_bootstrapped_demos=4)\n",
+    "sentiment_clf = opt.compile(sentiment, trainset=trainset)\n",
+    "\n",
+    "\n",
+    "print(sentiment_clf(\"It was a delightful movie!\").label)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9ee7082",
+   "metadata": {},
+   "source": [
+    "Optimizers can be saved to json using `save()` and autologged to MLFlow."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -555,6 +749,25 @@
   {
    "cell_type": "markdown",
    "id": "ef973678",
+   "metadata": {},
+   "source": [
+    "# Appendix\n",
+    "\n",
+    "### Bayesian Search\n",
+    "Also called Bayesian optimization. It's a strategy for searching through a large parameter-space with only a small amount of traversals are allowed.  It tries to balance exploration with exploitation\n",
+    "\n",
+    "1. Start with some given prior.\n",
+    "2. Try a few prompts and record their scores\n",
+    "3. Fit a surrogate model: try to cheaply model the relationship between instruction -> expected score.\n",
+    "4. Use the surrogate to identify potential new instruction candidates.\n",
+    "5. Evaluate, update surrogate, repeat.\n",
+    "\n",
+    "It's basically a cheap and dirty way to get something functioning."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d8ae040",
    "metadata": {},
    "source": []
   }
