--- a/dspy_modules/intro_to_dspy.ipynb
+++ b/dspy_modules/intro_to_dspy.ipynb
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "ce02afed",
    "metadata": {},
    "outputs": [
@@ -659,12 +659,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "64e8d92c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def em(example, pred, **_): \n",
+    "def em(example, pred, *_, **__):\n",
     "    return int(example.label == pred.label)"
    ]
   },
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "743f980e",
    "metadata": {},
    "outputs": [
@@ -690,27 +690,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/20 [00:00<?, ?it/s]2025/05/18 17:10:17 ERROR dspy.teleprompt.bootstrap: Failed to run or to evaluate example Example({'text': 'hide new secretions from the parental units ', 'label': 'negative'}) (input_keys=None) with <function em at 0x121b39260> due to Inputs have not been set for this example. Use `example.with_inputs()` to set them..\n",
-      "2025/05/18 17:10:17 ERROR dspy.teleprompt.bootstrap: Failed to run or to evaluate example Example({'text': 'contains no wit , only labored gags ', 'label': 'negative'}) (input_keys=None) with <function em at 0x121b39260> due to Inputs have not been set for this example. Use `example.with_inputs()` to set them..\n",
-      "2025/05/18 17:10:17 ERROR dspy.teleprompt.bootstrap: Failed to run or to evaluate example Example({'text': 'that loves its characters and communicates something rather beautiful about human nature ', 'label': 'positive'}) (input_keys=None) with <function em at 0x121b39260> due to Inputs have not been set for this example. Use `example.with_inputs()` to set them..\n",
-      "2025/05/18 17:10:17 ERROR dspy.teleprompt.bootstrap: Failed to run or to evaluate example Example({'text': 'remains utterly satisfied to remain the same throughout ', 'label': 'negative'}) (input_keys=None) with <function em at 0x121b39260> due to Inputs have not been set for this example. Use `example.with_inputs()` to set them..\n",
-      " 20%|██        | 4/20 [00:00<00:00, 819.68it/s]\n"
+      " 25%|██▌       | 5/20 [00:05<00:17,  1.20s/it]\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "Inputs have not been set for this example. Use `example.with_inputs()` to set them.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m opt = BootstrapFewShot(metric=em,\n\u001b[32m      2\u001b[39m                        max_labeled_demos=\u001b[32m4\u001b[39m,\n\u001b[32m      3\u001b[39m                        max_bootstrapped_demos=\u001b[32m4\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m sentiment_clf = \u001b[43mopt\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcompile\u001b[49m\u001b[43m(\u001b[49m\u001b[43msentiment\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrainset\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtrainset\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(sentiment_clf(\u001b[33m\"\u001b[39m\u001b[33mIt was a delightful movie!\u001b[39m\u001b[33m\"\u001b[39m).label)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Repos/personal/obsidian-llm-tool-use/.venv/lib/python3.12/site-packages/dspy/teleprompt/bootstrap.py:83\u001b[39m, in \u001b[36mBootstrapFewShot.compile\u001b[39m\u001b[34m(self, student, teacher, trainset)\u001b[39m\n\u001b[32m     81\u001b[39m \u001b[38;5;28mself\u001b[39m._prepare_student_and_teacher(student, teacher)\n\u001b[32m     82\u001b[39m \u001b[38;5;28mself\u001b[39m._prepare_predictor_mappings()\n\u001b[32m---> \u001b[39m\u001b[32m83\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_bootstrap\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     85\u001b[39m \u001b[38;5;28mself\u001b[39m.student = \u001b[38;5;28mself\u001b[39m._train()\n\u001b[32m     86\u001b[39m \u001b[38;5;28mself\u001b[39m.student._compiled = \u001b[38;5;28;01mTrue\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Repos/personal/obsidian-llm-tool-use/.venv/lib/python3.12/site-packages/dspy/teleprompt/bootstrap.py:158\u001b[39m, in \u001b[36mBootstrapFewShot._bootstrap\u001b[39m\u001b[34m(self, max_bootstraps)\u001b[39m\n\u001b[32m    155\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m round_idx \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m.max_rounds):\n\u001b[32m    156\u001b[39m     bootstrap_attempts += \u001b[32m1\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m158\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_bootstrap_one_example\u001b[49m\u001b[43m(\u001b[49m\u001b[43mexample\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mround_idx\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[32m    159\u001b[39m         bootstrapped[example_idx] = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    160\u001b[39m         \u001b[38;5;28;01mbreak\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Repos/personal/obsidian-llm-tool-use/.venv/lib/python3.12/site-packages/dspy/teleprompt/bootstrap.py:214\u001b[39m, in \u001b[36mBootstrapFewShot._bootstrap_one_example\u001b[39m\u001b[34m(self, example, round_idx)\u001b[39m\n\u001b[32m    212\u001b[39m         current_error_count = \u001b[38;5;28mself\u001b[39m.error_count\n\u001b[32m    213\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m current_error_count >= \u001b[38;5;28mself\u001b[39m.max_errors:\n\u001b[32m--> \u001b[39m\u001b[32m214\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m e\n\u001b[32m    215\u001b[39m     logger.error(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mFailed to run or to evaluate example \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexample\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m with \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.metric\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m due to \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    217\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m success:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Repos/personal/obsidian-llm-tool-use/.venv/lib/python3.12/site-packages/dspy/teleprompt/bootstrap.py:194\u001b[39m, in \u001b[36mBootstrapFewShot._bootstrap_one_example\u001b[39m\u001b[34m(self, example, round_idx)\u001b[39m\n\u001b[32m    191\u001b[39m     predictor_cache[name] = predictor.demos\n\u001b[32m    192\u001b[39m     predictor.demos = [x \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m predictor.demos \u001b[38;5;28;01mif\u001b[39;00m x != example]\n\u001b[32m--> \u001b[39m\u001b[32m194\u001b[39m prediction = teacher(**\u001b[43mexample\u001b[49m\u001b[43m.\u001b[49m\u001b[43minputs\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m    195\u001b[39m trace = dspy.settings.trace\n\u001b[32m    197\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m name, predictor \u001b[38;5;129;01min\u001b[39;00m teacher.named_predictors():\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Repos/personal/obsidian-llm-tool-use/.venv/lib/python3.12/site-packages/dspy/primitives/example.py:80\u001b[39m, in \u001b[36mExample.inputs\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     78\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34minputs\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m     79\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m._input_keys \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m80\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mInputs have not been set for this example. Use `example.with_inputs()` to set them.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     82\u001b[39m     \u001b[38;5;66;03m# return items that are in input_keys\u001b[39;00m\n\u001b[32m     83\u001b[39m     d = {key: \u001b[38;5;28mself\u001b[39m._store[key] \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m._store \u001b[38;5;28;01mif\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m._input_keys}\n",
-      "\u001b[31mValueError\u001b[39m: Inputs have not been set for this example. Use `example.with_inputs()` to set them."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 4 full traces after 5 examples for up to 1 rounds, amounting to 5 attempts.\n",
+      "positive\n"
      ]
     }
    ],
@@ -721,7 +709,7 @@
     "sentiment_clf = opt.compile(sentiment, trainset=trainset)\n",
     "\n",
     "\n",
-    "print(sentiment_clf(\"It was a delightful movie!\").label)"
+    "print(sentiment_clf(text=\"It was a delightful movie!\").label)"
    ]
   },
   {
@@ -730,6 +718,16 @@
    "metadata": {},
    "source": [
     "Optimizers can be saved to json using `save()` and autologged to MLFlow."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "9158d617",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentiment_clf.save(\"./sentiment.json\", save_program=False)\n"
    ]
   },
   {
